--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link
       rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"
+    />
+    <link
+      rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
     />
     <link
@@ -34,7 +38,7 @@
 
     <section class="py-10 mx-auto max-w-screen-sm">
       <div
-        class="card card-side flex flex-col md:flex-row glass shadow-xl text-gray-800 p-5"
+        class="card card-side flex flex-col md:flex-row glass shadow-xl text-gray-800 p-5 animate__animated animate__fadeInLeft"
       >
         <figure class="w-full md:w-1/3">
           <img
@@ -56,7 +60,7 @@
       class="w-full flex flex-wrap gap-4 py-10 mx-auto items-center justify-center text-gray-800"
     >
       <div>
-        <div class="card glass w-95">
+        <div class="card glass w-95 animate__animated animate__slideInUp">
           <div class="card-body">
             <h2 class="card-title">Profil</h2>
             <p>Profil saya</p>
@@ -73,7 +77,9 @@
         </div>
       </div>
       <div>
-        <div class="card glass w-95">
+        <div
+          class="card glass w-95 animate__animated animate__slideInUp animate__delay-1s"
+        >
           <div class="card-body">
             <h2 class="card-title">Daftar</h2>
             <p>Formulir pendaftaran</p>
@@ -90,7 +96,7 @@
         </div>
       </div>
       <div>
-        <div class="card glass w-95">
+        <div class="card glass w-95 animate__animated animate__slideInUp animate__delay-2s">
           <div class="card-body">
             <h2 class="card-title">Hello, world!</h2>
             <p>Lorem ipsum dolor sit amet</p>
